Brand new preferences system and ConfigFrame. Some bugfix.